--- a/src/index.html
+++ b/src/index.html
@@ -254,7 +254,7 @@
                 <img src="./img/index/cap.webp" alt="cap">
             </div>
             <div class="col">
-                <form class="needs-validation" novalidate>
+                <form class="needs-validation form-main" novalidate>
                     <h4 class="green text-center">Безкоштовна консультація нашого спеціаліста</h4>
                     <div class="mb-3">
                         <input type="text" name="userName" class="form-control" id="validationName"
