--- a/src/chay.html
+++ b/src/chay.html
@@ -211,7 +211,7 @@
 
     <div class="container cards">
         <div class="row">
-            <div class="col mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="./img/chay/Forest_Fruit.webp" class="card-img-top" alt="Forest fruit">
@@ -235,7 +235,7 @@
                 </div>
             </div>
 
-            <div class="col mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="./img/chay/Green_Tea_Citrus.webp" class="card-img-top" alt="Green Tea Citrus">
@@ -258,7 +258,7 @@
                 </div>
             </div>
 
-            <div class="col mb-1">
+            <div class="col col-auto col-sm-6 col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
                         <img src="./img/chay/With_Mint.webp" class="card-img-top"
@@ -277,6 +277,104 @@
                         <small>
                             <p class="lh-sm">Це преміальна лінійка чаю Lipton високої якості спеціально для закладів HoReCa і кав'ярень.</p>
                             <p class="lh-sm"><b>Lipton "With Mint"</b> - цінується по всьому світу за приємний смак і аромат. Це визнана класика чайної колекції. У поєднанні зелений чай і м'ята дають воістину чудовий результат. Вони ніби створені один для одного.</p>
+                        </small>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container cards">
+        <div class="row">
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="./img/chay/TottiEmeraldLeaf.webp" class="card-img-top combo" alt="Totti Emerald Leaf">
+                        <figcaption class="goods">
+                            <ul class="lh-sm">
+                                <li><b>Склад:<br></b>чай зелений<br>байховий<br>китайський<br>крупнолис-<br>товий.</li>
+                                <br>
+                                <li><b>Фасовка:<br></b>пакет (25х2 г),<br>лист (250 г) </li>
+                            </ul>
+                        </figcaption>
+                    </figure>
+
+                    <div class="card-body">
+                        <h3 class="text-center">Чай Totti "Emerald Leaf" зелений</h3>
+                        <small>
+                            <p class="lh-sm">Добірний зелений чай з надзвичайно ніжним смаком і тонким квітковим ароматом. Смарагдове листя цього вишуканого чаю - справжнє багатство з чайної скарбниці Китаю.</p>
+                        </small>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="./img/chay/TottiFruit.webp" class="card-img-top combo" alt="Totti Fruit">
+                        <figcaption class="goods">
+                            <ul class="lh-sm">
+                                <li><b>Склад:<br></b>каркаде,<br>фруктова<br>суміш<br>"малина-<br>журавлина".</li>
+                                <br>
+                                <li><b>Фасовка:<br></b>пакет (25х2 г),<br>лист (250 г) </li>
+                            </ul>
+                        </figcaption>
+                    </figure>
+
+                    <div class="card-body">
+                        <h3 class="text-center">Чай Totti "Mellow Berries" фруктовий</h3>
+                        <small>
+                            <p class="lh-sm">Елітний ягідний чайний напій з яскравим неповторним смаком і м'яким ароматом стиглих фруктів.</p>
+                        </small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="./img/chay/TottiMoonlight.webp" class="card-img-top combo"
+                            alt="Totti Moonlight Sonata">
+                        <figcaption class="goods">
+                            <ul class="lh-sm">
+                                <li><b>Склад:<br></b>чай зелений<br>байховий<br>китайський<br>крупнолисто-<br>вий,<br>пелюстки<br>волошок,<br>лимонник.</li>
+                                <br>
+                                <li><b>Фасовка:<br></b>лист (250 г) </li>
+                            </ul>
+                        </figcaption>
+                    </figure>
+
+                    <div class="card-body">
+                        <h3 class="text-center">Чай Totti "Moonlight Sonata" трав'яний</h3>
+                        <small>
+                            <p class="lh-sm">Цей вишуканий чай дивним чином поєднує в собі п'янкий аромат квітів і фруктів з чарівною свіжістю лимонника. Вишукане задоволення для справжніх цінителів трав'яного чаю.</p>
+                        </small>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+                <div class="card">
+                    <figure>
+                        <img src="./img/chay/pack.webp" class="card-img-top"
+                            alt="Filter Packet">
+                        <!-- <figcaption class="goods">
+                            <ul class="lh-sm">
+                                <li><b>Фасовка:<br></b>25 пакетиків.</li>
+                                <br>
+                                <li><b>Маса нетто:<br></b>45 гр.</li>
+                            </ul>
+                        </figcaption> -->
+                    </figure>
+
+                    <div class="card-body">
+                        <h3 class="text-center">Фільтр-пакети для заварювання чаю</h3>
+                        <small>
+                            <p class="lh-sm">Фільтр-пакети дуже зручні для заварювання всіх видів розсипних чаїв, а також трав'яних сумішей.</p>
+                           
                         </small>
 
                     </div>
