--- a/src/index.html
+++ b/src/index.html
@@ -224,7 +224,7 @@
             <div class="row">
                 <div class="col-lg-4 p-1">
                     <div class="image">
-                        <a href="/dlya_magazinov_i_setey.html"><img src="./img/index/horeca.webp" class="card-img-top"
+                        <a href="./dlya_magazinov_i_setey.html"><img src="./img/index/horeca.webp" class="card-img-top"
                                 alt="horeca"></a>
                         <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
                     </div>
@@ -232,6 +232,7 @@
 
                 <div class="col-lg-4 p-1">
                     <div class="image">
+                        <a href="./dlya_cafe_restoranov.html">
                         <img src="./img/index/classic.webp" class="card-img-top" alt="classic">
                         <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
                     </div>
@@ -239,6 +240,7 @@
 
                 <div class="col-lg-4 p-1">
                     <div class="image">
+                        <a href="./vending.html">
                         <img src="./img/index/vending.webp" class="card-img-top" alt="vending">
                         <div class="bottom-left">ВЕНДІНГ</div>
                     </div>
