--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -230,7 +230,7 @@
                                 <br>
                                 <li><b>Потужність: <br> </b>1,8 кВт</li>
                                 <br>
-                                <li><b>Вага: <br> </b>167 кг</li>r
+                                <li><b>Вага: <br> </b>167 кг</li>
                             </ul>
                             <div class="timeline text-center">
                                 <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
