--- a/src/contacty.html
+++ b/src/contacty.html
@@ -14,6 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
 <body class="contacts_body">
@@ -183,7 +184,7 @@
 
     <div class="description container fill contacts">
         <div class="row">
-            <div class="col p-3 m-3">
+            <div class="col p-5 m-3">
                 <h4 class="text-center fw-bold">Ми працюємо! <br> <br> Але ситуація змінюється кожну хвилину. Тому
                     уточнюйте інформацію за номерами телефонів вашого регіону, які вказані нижче.</h4>
             </div>
@@ -194,15 +195,17 @@
 
     <div class="container">
         <div class="row">
-            <div class="col p-3 m-3 mb-5 fill contacts">
+            <div class="col p-5 m-3 mb-5 fill contacts">
                 <h5 class="text-center green"><b>ХОРЕКА</b></h5>
                 <div class="container hr-line-contacts"></div>
                 <h6><b>ХАРКІВ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
+                        <i class="bi bi-telephone-fill green"></i>
                         <a href="tel:+380960542770">+38(096) 054-27-70</a>
                     </li>
                     <li class="text-nowrap tel">
+                        <i class="bi bi-telephone-fill green"></i>
                         <a href="tel:+380935475572">+38(093) 547-55-72</a>
                     </li>
                 </ul>
@@ -212,7 +215,8 @@
                 <h6><b>КИЇВ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
-                        <a href="tel:+380960542770">+38(096) 054-27-70</a>
+                        <i class="bi bi-telephone-fill green"></i>
+                        <a href="tel:+380660227720">+38(066) 022-77-20</a>
                     </li>
                 </ul>
 
@@ -221,7 +225,8 @@
                 <h6><b>БРОВАРИ, БОРИСПІЛЬ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
-                        <a href="tel:+380960542770">+38(096) 054-27-70</a>
+                        <i class="bi bi-telephone-fill green"></i>
+                        <a href="tel:+380989700921">+38(098) 970-09-21</a>
                     </li>
                 </ul>
 
@@ -230,7 +235,8 @@
                 <h6><b>БІЛА ЦЕРКВА</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
-                        <a href="tel:+380960542770">+38(096) 054-27-70</a>
+                        <i class="bi bi-telephone-fill green"></i>
+                        <a href="tel:+380504400492">+38(050) 440-04-92</a>
                     </li>
                 </ul>
 
@@ -239,12 +245,13 @@
                 <h6><b>ЧЕРКАСИ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
-                        <a href="tel:+380960542770">+38(096) 054-27-70</a>
+                        <i class="bi bi-telephone-fill green"></i>
+                        <a href="tel:+380989700929">+38(098) 970-09-29</a>
                     </li>
                 </ul>
             </div>
 
-            <div class="col p-3 m-3 mb-5 fill contacts">
+            <div class="col p-5 m-3 mb-5 fill contacts">
                 <h5 class="text-center green"><b>ВЕНДІНГ</b></h5>
                 <div class="container hr-line-contacts"></div>
                 <h6>Встановлення вендінгового обладнання по містах:
@@ -253,9 +260,11 @@
                 <div class="container hr-line-contacts"></div>
                 <ul>
                     <li class="text-nowrap tel">
-                        <a href="tel:+380960542770">+38(096) 054-27-70</a>
+                        <i class="bi bi-telephone-fill green"></i>
+                        <a href="tel:+380950252822">+38(095) 025-28-22</a>
                     </li>
                     <li class="text-nowrap mail">
+                        <i class="bi bi-envelope-fill green"></i>
                         <a href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                     </li>
                 </ul>
@@ -263,7 +272,7 @@
 
             <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
 
-            <div class="col p-3 m-3 mb-5 fill contacts">
+            <div class="col p-5 m-3 mb-5 fill contacts">
                 <form class="needs-validation form-contacts" novalidate>
                     <h4 class="green text-center"><b> Залиште заявку і наш менеджер запропонує вам кращі умови
                             співпраці</b>
