--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -224,9 +224,25 @@
 
     <div class="container cards">
         <div class="row">
-            <div class="col mb-1">
-                <div class="card ">
-                    <img src="./img/avtomaty/GaiaTouch.webp" class="card-img-top" alt="GaiaTouch">
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="./img/avtomaty/GaiaTouch.webp" class="card-img-top" alt="GaiaTouch">
+                        <figcaption class="machine">
+                            <ul class="lh-sm">
+                                <li><b>Габарити: <br> </b>Висота 635 мм <br>Ширина 310 мм <br>Глибина 475 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,8 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>27 кг</li>
+                            </ul>
+                            <div class="timeline text-center mx-4">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
+                        </figcaption>
+                    </figure>
+
                     <div class="card-body">
                         <h3 class="text-center">Bianchi Gaia Touch</h3>
                         <small>
@@ -244,20 +260,36 @@
                             <p class="lh-sm">Може приготувати 8 видів напоїв на основі кави, сухого молока, какао та
                                 різноманітних кавових міксів.</p>
 
-                            <ul>
+                            <!-- <ul>
                                 <li><b>Габарити (ШхВхГ): </b>310 мм х 635 мм х 475 мм</li>
                                 <li><b>Потужність: </b>1,8 кВт</li>
                                 <li><b>Вага: </b>27 кг</li>
-                            </ul>
+                            </ul> -->
                         </small>
 
                     </div>
                 </div>
             </div>
 
-            <div class="col mb-1">
-                <div class="card">
-                    <img src="./img/avtomaty/necta.webp" class="card-img-top" alt="NectaCoroPrime">
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="./img/avtomaty/necta.webp" class="card-img-top" alt="NectaCoroPrime">
+                        <figcaption class="machine">
+                            <ul class="lh-sm">
+                                <li><b>Габарити: <br> </b>Висота 580 мм <br>Ширина 330 мм <br>Глибина 540 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,8 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>27 кг</li>
+                            </ul>
+                            <div class="timeline text-center mx-4">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
+                        </figcaption>
+                    </figure>
+
                     <div class="card-body">
                         <h3 class="text-center">Necta Coro Prime</h3>
                         <small>
@@ -269,20 +301,36 @@
 
                             <p class="lh-sm">Готує напої з зернової кави і молока. Від 15 чашок в день.</p>
 
-                            <ul>
+                            <!-- <ul>
                                 <li><b>Габарити (ШхВхГ): </b>330 мм х 580 мм х 540 мм</li>
                                 <li><b>Потужність: </b>1,8 кВт</li>
                                 <li><b>Вага: </b>27 кг</li>
-                            </ul>
+                            </ul> -->
                         </small>
 
                     </div>
                 </div>
             </div>
 
-            <div class="col mb-1">
-                <div class="card">
-                    <img src="./img/avtomaty/TaliaTouch.webp" class="card-img-top" alt="BianchiTaliaTouch">
+            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="./img/avtomaty/TaliaTouch.webp" class="card-img-top" alt="BianchiTaliaTouch">
+                        <figcaption class="machine">
+                            <ul class="lh-sm">
+                                <li><b>Габарити: <br> </b>Висота 720 мм <br>Ширина 395 мм <br>Глибина 576 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,8 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>31,5 кг</li>
+                            </ul>
+                            <div class="timeline text-center mx-4">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
+                        </figcaption>
+                    </figure>
+
                     <div class="card-body">
                         <h3 class="text-center">Bianchi Talia Touch</h3>
                         <small>
@@ -298,20 +346,35 @@
                             <p class="lh-sm">Може приготувати 24 види напоїв на основі кави, сухого молока, какао та
                                 різноманітних кавових міксів.</p>
 
-                            <ul>
+                            <!-- <ul>
                                 <li><b>Габарити (ШхВхГ): </b>395 мм х 720 мм х 576 мм</li>
                                 <li><b>Потужність: </b>1,8 кВт</li>
                                 <li><b>Вага: </b>31,5 кг</li>
-                            </ul>
+                            </ul> -->
                         </small>
-
                     </div>
                 </div>
             </div>
 
             <div class="col mb-1">
-                <div class="card">
-                    <img src="./img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="GaiaStyle">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="./img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="GaiaStyle">
+                        <figcaption class="machine">
+                            <ul class="lh-sm">
+                                <li><b>Габарити: <br> </b>Висота 635 мм <br>Ширина 310 мм <br>Глибина 450 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,5 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>25 кг</li>
+                            </ul>
+                            <div class="timeline text-center mx-4">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
+                        </figcaption>
+                    </figure>
+                    
                     <div class="card-body">
                         <h3 class="text-center">Bianchi Gaia Style</h3>
                         <small>
@@ -323,11 +386,11 @@
                             <p class="lh-sm">Може приготувати 8 видів напоїв на основі кави, сухого молока, какао та
                                 різноманітних кавових міксів.</p>
 
-                            <ul>
+                            <!-- <ul>
                                 <li><b>Габарити (ШхВхГ): </b>310 мм х 635 мм х 450 мм</li>
                                 <li><b>Потужність: </b>1,5 кВт</li>
                                 <li><b>Вага: </b>25 кг</li>
-                            </ul>
+                            </ul> -->
                         </small>
 
                     </div>
@@ -499,12 +562,12 @@
                             Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Бровари, Бориспіль, Черкаси
                         </p>
                         <div class="row">
-                            <div class="col footer-left">
+                            <div class="col col-auto col-md-6 footer-left">
                                 <h6>Харків</h6>
                                 <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
                                 <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
-                            <div class="col footer-left">
+                            <div class="col col-auto col-md-6 footer-left">
                                 <h6>Київ</h6>
                                 <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
