--- a/src/contacty.html
+++ b/src/contacty.html
@@ -182,20 +182,23 @@
         <h3>Контактна інформація</h3>
     </div>
 
-    <div class="description container fill contacts">
-        <div class="row">
-            <div class="col p-5 m-3">
-                <h4 class="text-center fw-bold">Ми працюємо! <br> <br> Але ситуація змінюється кожну хвилину. Тому
-                    уточнюйте інформацію за номерами телефонів вашого регіону, які вказані нижче.</h4>
-            </div>
-        </div>
-    </div>
+
 
     <!-- /////////////////////////////////////////   Body    ////////////////////////////////////////     -->
 
+
     <div class="container">
+        <div class="description container contacts fill">
+            <div class="row">
+                <div class="col p-5 m-3">
+                    <h4 class="text-center fw-bold">Ми працюємо! <br> <br> Але ситуація змінюється кожну хвилину. Тому
+                        уточнюйте інформацію за номерами телефонів вашого регіону, які вказані нижче.</h4>
+                </div>
+            </div>
+        </div>
+
         <div class="row">
-            <div class="col p-5 m-3 mb-5 fill contacts">
+            <div class="col p-5 m-3 mb-5 contacts fill">
                 <h5 class="text-center green"><b>ХОРЕКА</b></h5>
                 <div class="container hr-line-contacts"></div>
                 <h6><b>ХАРКІВ</b></h6>
@@ -251,7 +254,7 @@
                 </ul>
             </div>
 
-            <div class="col p-5 m-3 mb-5 fill contacts">
+            <div class="col p-5 m-3 mb-5 contacts fill">
                 <h5 class="text-center green"><b>ВЕНДІНГ</b></h5>
                 <div class="container hr-line-contacts"></div>
                 <h6>Встановлення вендінгового обладнання по містах:
@@ -272,7 +275,7 @@
 
             <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
 
-            <div class="col p-5 m-3 mb-5 fill contacts">
+            <div class="col p-5 m-3 mb-5 contacts fill">
                 <form class="needs-validation form-contacts" novalidate>
                     <h4 class="green text-center"><b> Залиште заявку і наш менеджер запропонує вам кращі умови
                             співпраці</b>
@@ -314,9 +317,6 @@
         </div>
     </div>
 
-
-
-
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
 
     <footer class="footer">
@@ -329,12 +329,12 @@
                             Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Бровари, Бориспіль, Черкаси
                         </p>
                         <div class="row">
-                            <div class="col footer-left">
+                            <div class="col col-auto col-md-6 footer-left">
                                 <h6>Харків</h6>
                                 <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
                                 <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
-                            <div class="col footer-left">
+                            <div class="col col-auto col-md-6 footer-left">
                                 <h6>Київ</h6>
                                 <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
