--- a/src/kofemolki.html
+++ b/src/kofemolki.html
@@ -346,12 +346,12 @@
                             Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Бровари, Бориспіль, Черкаси
                         </p>
                         <div class="row">
-                            <div class="col footer-left">
+                            <div class="col col-auto col-md-6 footer-left">
                                 <h6>Харків</h6>
                                 <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
                                 <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
-                            <div class="col footer-left">
+                            <div class="col col-auto col-md-6 footer-left">
                                 <h6>Київ</h6>
                                 <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
